--- a/styleHeader.css
+++ b/styleHeader.css
@@ -1,14 +1,18 @@
- /* Navbar container */
- .navbar {
-    display: flex;
-    font-family: Arial;
-    width: 100%;
-    align-items: center;
-    justify-content: space-between;
-    
-  }
+.navbar {
+  display: flex;
+  font-family: Arial;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
   
-  /* Links inside the navbar */
+}
+.imgLogo
+{
+  width: 100%; 
+}
+@media screen and (max-width: 780px)
+{
+    
   .navbar a {
     float: left;
     font-size: 16px;
@@ -17,14 +21,10 @@
     padding: 14px 16px;
     text-decoration: none;
   }
-  
-  /* The dropdown container */
   .dropdown {
     overflow: hidden;
     
   }
-  
-  /* Dropdown button */
   .dropdown  {
     font-size: 16px;
     border: none;
@@ -32,16 +32,12 @@
     color: white;
     padding: 14px 16px;
     background-color: inherit;
-    font-family: inherit; /* Important for vertical align on mobile phones */
-    margin: 0; /* Important for vertical align on mobile phones */
+    font-family: inherit; 
+    margin: 0; 
   }
-  
-  /* Add a red background color to navbar links on hover */
   .navbar a:hover, .dropdown:hover  {
     cursor: pointer;
   }
-  
-  /* Dropdown content (hidden by default) */
   .dropdown-content {
     display: none;
     position: absolute;
@@ -50,8 +46,6 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
-  
-  /* Links inside the dropdown */
   .dropdown-content a {
     float: none;
     color: black;
@@ -60,13 +54,30 @@
     display: block;
     text-align: left;
   }
-  
-  /* Add a grey background color to dropdown links on hover */
   .dropdown-content a:hover {
     background-color: #ddd;
   }
-  
-  /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {
     display: block;
   } 
+}
+@media screen and (min-width: 780px)
+{
+  .navIconImg
+  {
+    display: none;
+  }
+
+  .dropdown-content a
+  {
+    text-decoration: none;
+    font-size: 2vw;
+    padding-right: 0.5vw;
+    color:rgb(41, 38, 38)
+  }
+
+  .dropdown-content .active
+  {
+    color:rgb(166, 63, 80)
+  }
+}
