--- a/styleFooter.css
+++ b/styleFooter.css
@@ -1,38 +1,127 @@
-@media screen and (min-width: 780px)
-{
-  .footerFlexBox {
-    display: flex;
-    
-    justify-content: space-between;
-  }
-
-  .footerOne
-  {
-    width: 50%;
-  }
-
-  .footerGrid
-  {
-    display: none;
-  }
-}
-
 @media screen and (max-width: 780px)
 {
 
-  .footerOne{
+  .fontLogo
+  {
+    display: flex;
+   
+  }
+  .fontLogo img
+  {
+   max-width: 20px;
+   margin-left:4px;
+   margin-right:10px;
+  }
+  .left-container
+  {
+    width: 100%;
+  }
+  .row
+  {
+    display: flex;
+    flex-wrap: wrap;
+  
+  }
+  ul
+  {
+    list-style: none;
+  }
+  .footer-col
+  {
+    width: 30vw;
+    padding: 0 15px;
+  }
+  .footer-col h4
+  {
+    font-size: 10px;
+    color: #555555;
+    font-weight: bold;
+    margin-bottom: 20px;
+    padding-left: 40px;
+  }
+  .footer-col ul li
+  {
+    margin-bottom: 10px;
+  }
+  .footer-col ul li a
+  {
+    font-size: 11px;
+    color: #555555;
+    text-decoration: none;
+    display: block;
+  }
+}
+
+@media screen and (min-width: 780px)
+{
+
+  .fontLogo
+  {
+    display: flex;
+   
+  }
+  .fontLogo img
+  {
+   max-width: 20px;
+   margin-left:4px;
+   margin-right:10px;
+  }
+  
+  .left-container
+  {
     width: 100%;
   }
 
-  .footerFlexBox {
+  .footerBox
+  {
     display: flex;
     justify-content: flex-start;
-    flex-wrap: wrap;
   }
-
-  .footerTwo
+  .row
   {
-    display: none;
+    display: flex;
+    justify-content: flex-end;
+  
   }
+  ul
+  {
+    list-style: none;
+  }
+  .footer-col
+  {
+    width: 100%;
+  }
+  .footer-col h4
+  {
+    font-size: 10px;
+    color: #555555;
+    font-weight: bold;
+    margin-bottom: 30px;
+    padding-left: 40px;
+  }
+  .footer-col ul li
+  {
+    margin-bottom: 10px;
+  }
+  .footer-col ul li a
+  {
+    font-size: 11px;
+    color: #555555;
+    text-decoration: none;
+    display: block;
+  }
+}
 
+.copyRightBox
+{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.copyRightBox p
+{
+  color:#5555;
+  font-size: 14px;
+  width: 24%;
 }
