--- a/styles/styleCards.css
+++ b/styles/styleCards.css
@@ -1,5 +1,5 @@
-
-.card {
+.card 
+{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px; 
@@ -7,16 +7,19 @@
   margin-right:10%;
 }
 
-.card img {
+.card img 
+{
   border-radius: 5px 5px 0 0;
   width: 150px;
 }
 
-.card:hover {
+.card:hover 
+{
   box-shadow: 0 68px 148px 60px rgba(245, 99, 26, 0.838);
 }
 
-.cardContainer {
+.cardContainer 
+{
   display: flex;
   flex-wrap: wrap;
   background-color: #EEEEEE;
@@ -24,17 +27,19 @@
   border-radius: 0 0 5px 5px;
 }
 
-.containerNTFS {
+.containerNTFS 
+{
   display: flex;
   align-items: flex-start;
 }
 
-.cardContainer img {
+.cardContainer img 
+{
   width: 8px;
   margin-left:10%;
 }
 
-.cardContainer p:nth-child(1)
+.cardSeries
 {
   font-size: 8px;
   color:rgb(202, 87, 16);
@@ -43,27 +48,27 @@
   min-height: 10px;
 }
 
-.cardContainer p:nth-child(2)
+.cardHeader
 {
   font-size: 8px;
   margin-left:26%;
   min-height: 10px;
 }
 
-.cardContainer p:nth-child(3)
+.cardName
 {
   font-size: 12px;
   min-width: 60px;
   margin-left:4%;
   min-height: 10px;
 }
-.cardContainer p:nth-child(5)
+.cardPrice
 {
   font-size: 12px;
   min-height: 10px;
 }
 
-.cardContainer p:nth-child(6)
+.cardNumber
 {
   font-size: 9px;
   min-width: 70px;
@@ -71,7 +76,7 @@
   min-height: 10px;
 }
 
-.cardContainer p:nth-child(7)
+.cardTime
 {
   font-size: 9px;
   margin-left:16%;
